upload all files

--- a/products/platingcoating/tinplating/index.html
+++ b/products/platingcoating/tinplating/index.html
@@ -8,7 +8,7 @@
   <!-- SEO base -->
   <meta name="description" content="BASn 4140 น้ำยาชุบดีบุกเงาคุณภาพสูง: สัดส่วนการผสม ขั้นตอนการชุบ พารามิเตอร์การทำงาน อุปกรณ์ที่จำเป็น และเหตุผลที่ควรใช้แอโนดดีบุกบริสุทธิ์ 99.9%">
   <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1">
-  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/tinplating/basn-4140/">
+  <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/tinplating/index.html">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/android-chrome-192.png">
@@ -21,7 +21,7 @@
   <meta property="og:site_name" content="Baume Chemical">
 <meta property="og:title" content="BASn 4140 — น้ำยาชุบดีบุกเงา">
 <meta property="og:description" content="สัดส่วนการผสม ขั้นตอนชุบ พารามิเตอร์ อุปกรณ์ และเหตุผลที่ใช้ Tin Anode 99.9%">
-<meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/tinplating/basn-4140/">
+<meta property="og:url" content="https://www.baumechemical.com/products/platingcoating/tinplating/index.html">
 <meta property="og:image" content="https://img5.pic.in.th/file/secure-sv1/thumbnail1.jpg">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
@@ -37,40 +37,53 @@
 
 <script type="application/ld+json">
 {
-  "@context":"https://schema.org",
-  "@type":"Product",
-  "name":"BASn 4140 — น้ำยาชุบดีบุกเงา",
-  "sku":"BASn-4140",
-  "mpn":"BASn-4140",
-  "brand":{"@type":"Brand","name":"Baume Chemical"},
-  "category":"Tin Plating",
-  "inLanguage":"th",
-  "description":"น้ำยาชุบดีบุกเงาคุณภาพสูง: สัดส่วนการผสม ขั้นตอนการชุบ พารามิเตอร์การทำงาน อุปกรณ์ที่จำเป็น และเหตุผลที่ควรใช้แอโนดดีบุกบริสุทธิ์ 99.9%",
-  "image":"https://img5.pic.in.th/file/secure-sv1/thumbnail1.jpg",
-  "url":"https://www.baumechemical.com/products/platingcoating/tinplating/basn-4140/",
-  "audience":{"@type":"Audience","audienceType":"Industrial / Electronics / Automotive"},
-  "additionalProperty":[
-    {"@type":"PropertyValue","name":"Stannous sulfate","value":"30","unitCode":"GRM","valueReference":"g/L"},
-    {"@type":"PropertyValue","name":"Sulfuric acid","value":"100","unitCode":"2Z","valueReference":"cc/L"},
-    {"@type":"PropertyValue","name":"BASn 4141 (Brightener)","value":"5","unitCode":"2Z","valueReference":"cc/L"},
-    {"@type":"PropertyValue","name":"BASn 4142 (Additive)","value":"4","unitCode":"2Z","valueReference":"cc/L"},
-    {"@type":"PropertyValue","name":"Temperature","value":"18–24 °C"},
-    {"@type":"PropertyValue","name":"Current density","value":"0.5–5 A/dm²"}
+  "@context": "https://schema.org",
+  "@type": "Product",
+  "name": "BASn 4140 — น้ำยาชุบดีบุกเงา",
+  "sku": "BASn-4140",
+  "mpn": "BASn-4140",
+  "brand": {
+    "@type": "Brand",
+    "name": "Baume Chemical"
+  },
+  "category": "Tin Plating",
+  "inLanguage": "th",
+  "description": "น้ำยาชุบดีบุกเงาคุณภาพสูง: สัดส่วนการผสม ขั้นตอนการชุบ พารามิเตอร์การทำงาน อุปกรณ์ที่จำเป็น และเหตุผลที่ควรใช้แอโนดดีบุกบริสุทธิ์ 99.9%",
+  "image": "https://img5.pic.in.th/file/secure-sv1/thumbnail1.jpg",
+  "url": "https://www.baumechemical.com/products/platingcoating/tinplating/index.html",
+
+  "audience": [
+    { "@type": "Audience", "audienceType": "Industrial" },
+    { "@type": "Audience", "audienceType": "Electronics" },
+    { "@type": "Audience", "audienceType": "Automotive" }
   ],
-  "isRelatedTo":{
-    "@type":"Product",
-    "name":"Tin Anode 99.9%",
-    "url":"https://www.baumechemical.com/products/equipment/#tin-anode"
+
+  "additionalProperty": [
+    { "@type": "PropertyValue", "name": "Stannous sulfate", "value": "30 g/L" },
+    { "@type": "PropertyValue", "name": "Sulfuric acid", "value": "100 cc/L" },
+    { "@type": "PropertyValue", "name": "BASn 4141 (Brightener)", "value": "5 cc/L" },
+    { "@type": "PropertyValue", "name": "BASn 4142 (Additive)", "value": "4 cc/L" },
+    { "@type": "PropertyValue", "name": "Temperature", "value": "18–24 °C" },
+    { "@type": "PropertyValue", "name": "Current density", "value": "0.5–5 A/dm²" }
+  ],
+
+  "isRelatedTo": {
+    "@type": "Product",
+    "name": "Tin Anode 99.9%",
+    "url": "https://www.baumechemical.com/products/equipment/#tin-anode"
   },
-  "offers":{
-    "@type":"Offer",
-    "url":"https://www.baumechemical.com/products/platingcoating/tinplating/basn-4140/",
-    "availability":"https://schema.org/InStock",
-    "priceCurrency":"THB"
-  },
-  "hasPart":[
-    {"@type":"CreativeWork","@id":"#howto-makeup"},
-    {"@type":"CreativeWork","@id":"#howto-process"}
+
+"offers": {
+  "@type": "Offer",
+  "url": "https://www.baumechemical.com/products/platingcoating/tinplating/index.html",
+  "availability": "https://schema.org/InStock",
+  "priceCurrency": "THB",
+  "description": "กรุณาติดต่อฝ่ายขายเพื่อสอบถามราคา"
+},
+
+  "hasPart": [
+    { "@type": "CreativeWork", "@id": "#howto-makeup" },
+    { "@type": "CreativeWork", "@id": "#howto-process" }
   ]
 }
 </script>
@@ -135,7 +148,7 @@
     {"@type":"ListItem","position":2,"name":"Products","item":"https://www.baumechemical.com/products.html"},
     {"@type":"ListItem","position":3,"name":"Plating & Coating","item":"https://www.baumechemical.com/products/platingcoating/"},
     {"@type":"ListItem","position":4,"name":"Tin Plating","item":"https://www.baumechemical.com/products/platingcoating/tinplating/"},
-    {"@type":"ListItem","position":5,"name":"BASn 4140","item":"https://www.baumechemical.com/products/platingcoating/tinplating/basn-4140/"}
+    {"@type":"ListItem","position":5,"name":"BASn 4140","item":"https://www.baumechemical.com/products/platingcoating/tinplating/index.html"}
   ]
 }
 </script>
