upload all files

--- a/products/platingcoating/tinplating/index.html
+++ b/products/platingcoating/tinplating/index.html
@@ -74,10 +74,10 @@
   },
 
 "offers": {
-  "@type": "Offer",
-  "url": "https://www.baumechemical.com/products/platingcoating/tinplating/index.html",
+  "@type": "AggregateOffer",
+  "offerCount": 1,
   "availability": "https://schema.org/InStock",
-  "priceCurrency": "THB",
+  "url": "https://www.baumechemical.com/products/platingcoating/tinplating/index.html",
   "description": "กรุณาติดต่อฝ่ายขายเพื่อสอบถามราคา"
 },
 
