upload all files

--- a/products/platingcoating/tinplating/index.html
+++ b/products/platingcoating/tinplating/index.html
@@ -73,13 +73,22 @@
     "url": "https://www.baumechemical.com/products/equipment/#tin-anode"
   },
 
-"offers": {
-  "@type": "AggregateOffer",
-  "offerCount": 1,
-  "availability": "https://schema.org/InStock",
-  "url": "https://www.baumechemical.com/products/platingcoating/tinplating/index.html",
-  "description": "กรุณาติดต่อฝ่ายขายเพื่อสอบถามราคา"
-},
+  "offers": {
+    "@type": "Offer",
+    "url": "https://www.baumechemical.com/products/platingcoating/tinplating/index.html",
+    "availability": "https://schema.org/InStock",
+    "priceCurrency": "THB",
+    "description": "กรุณาติดต่อฝ่ายขายเพื่อสอบถามราคา"
+  },
+
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "0",
+    "ratingCount": "0",
+    "reviewCount": "0"
+  },
+
+  "review": [],
 
   "hasPart": [
     { "@type": "CreativeWork", "@id": "#howto-makeup" },
