upload all files

--- a/products/pretreatment/index.html
+++ b/products/pretreatment/index.html
@@ -389,6 +389,19 @@
             <a class="more" href="ultrasonic.html" data-i18n-key="btn_details">ดูรายละเอียด →</a>
           </div>
         </article>
+
+                <!-- Desmut -->
+        <article id="desmut" class="card lift reveal">
+          <picture>
+            <img src="https://img5.pic.in.th/file/secure-sv1/unnamed15cc7b8aa116ae1d.jpg" alt="A high-quality liquid deoxidizer developed with a special non-chromate formula.">
+          </picture>
+          <div class="body">
+            <div class="badges"><span class="badge">Desmut 1015</span><span class="badge">Pretreatment</span></div>
+            <h3 data-i18n-key="desmut_t">น้ำยาดีสมัทและลอกออกไซด์ (Desmut-1015)</h3>
+            <p data-i18n-key="desmut_d">ลอกออกไซด์ชนิดน้ำคุณภาพสูง พัฒนาขึ้นด้วยสูตรพิเศษที่ ปราศจากโครเมต (Non-Chromate) ช่วยเพิ่มความปลอดภัยในการทำงาน เป็นทางเลือกใหม่ที่อันตรายน้อยกว่าการใช้กรดไนตริกล้วน</p>
+            <a class="more" href="desmut-1015.html" data-i18n-key="btn_details">ดูรายละเอียด →</a>
+          </div>
+        </article>
       </div>
     </section>
 
@@ -577,6 +590,10 @@
         ultra_title:"ทำความสะอาดอัลตร้าโซนิค (Ultrasonic)",
         ultra_desc:"ระบบเขย่าขัดและกลิ้งล้าง กำจัดคราบในโพรง/รูด้วยคลื่นความถี่สูง เพิ่มประสิทธิภาพการทำความสะอาดและลดเวลา เหมาะกับชิ้นส่วนรูปทรงซับซ้อน",
 
+        desmut_t:"น้ำยาดีสมัทและลอกออกไซด์ (Desmut-1015)",
+        desmut_d:"ลอกออกไซด์ชนิดน้ำคุณภาพสูง พัฒนาขึ้นด้วยสูตรพิเศษที่ ปราศจากโครเมต (Non-Chromate) ช่วยเพิ่มความปลอดภัยในการทำงาน เป็นทางเลือกใหม่ที่อันตรายน้อยกว่าการใช้กรดไนตริกล้วน",
+
+
         btn_details:"ดูรายละเอียด →",
 
         tbl_type:"ประเภท", tbl_materials:"วัสดุที่เหมาะสม", tbl_soils:"คราบเป้าหมาย", tbl_app:"การใช้งาน", tbl_notes:"หมายเหตุ",
@@ -612,6 +629,9 @@
 
         ultra_title:"Ultrasonic Cleaner",
         ultra_desc:"Dislodges soils trapped in cavities/holes with high-frequency waves; boosts efficiency and reduces dwell time for complex parts.",
+
+        desmut_t:"Desmut & Deoxidizer (Desmut-1015)",
+        desmut_d:"A high-quality liquid deoxidizer developed with a special non-chromate formula. Enhances safety at work and is a less hazardous alternative to using pure nitric acid.",
 
         btn_details:"View details →",
 
