upload all files

--- a/products.html
+++ b/products.html
@@ -540,7 +540,8 @@ const PRODUCTS = [
   { label: "TDS Acid Degreaser", href: "https://www.baumechemical.com/docs/tds/acidclean105.pdf" },
   { label: "TDS Alkaline Degreaser", href: "https://www.baumechemical.com/docs/tds/soakcleanb1.pdf" },
   { label: "TDS Electro Degreaser", href: "https://www.baumechemical.com/docs/tds/degreaser-e60.pdf" },
-  { label: "TDS Ultrasonic Cleaner", href: "https://www.baumechemical.com/docs/tds/cleaner3388.pdf" }
+  { label: "TDS Ultrasonic Cleaner", href: "https://www.baumechemical.com/docs/tds/cleaner3388.pdf" },
+  { label: "TDS Desmut 1015", href: "https://www.baumechemical.com/docs/tds/desmut-1015.pdf" }
 ],
     specs:{ph:"Acid 1-3 Alkaline 10-13 ", temp:"60-80", current:"3-10 A/dm²"}
   },
