upload all files

--- a/products.html
+++ b/products.html
@@ -529,10 +529,10 @@ const PRODUCTS = [
   {
     id:"pretreatment", cat:"pretreatment", pop:1,
     name:{ th:"เคมีล้างผิวงาน | Pretreatment & Cleaning", en:"Pretreatment & Cleaning Chemicals" },
-    desc:{ th:"ยาล้างไขมันแบบกรด/ด่าง และอัลตร้าโซนิค เตรียมผิวก่อนชุบ ลดคราบน้ำมัน/สนิม",
-           en:"Acid/Alkaline degreasers and Ultrasonic cleaners. Prepare surfaces before plating; remove oils and rust." },
-    tags:{ th:["pretreatment","cleaning","degreaser","ล้างไขมัน","ultrasonic","acid","alkaline"],
-           en:["pretreatment","cleaning","degreaser","ultrasonic","acid","alkaline"] },
+    desc:{ th:"ยาล้างไขมันแบบกรด/ด่าง และอัลตร้าโซนิค เตรียมผิวก่อนชุบ ล้างคราบน้ำมัน สนิมและเขม่า ",
+           en:"Acid/Alkaline degreasers and Ultrasonic cleaners. Prepare surfaces before plating; remove oils rust and smut." },
+    tags:{ th:["pretreatment","cleaning","degreaser","ล้างไขมัน","ultrasonic","acid","alkaline","desmut"],
+           en:["pretreatment","cleaning","degreaser","ultrasonic","acid","alkaline","desmut"] },
     img:"https://i.imgur.com/QfsLZ0I.jpeg",
     href:"products/pretreatment/index.html",
     mail:"mailto:contact@baumechemical.com?subject=ขอใบเสนอราคา: เคมีล้างผิวงาน",
